--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MilkForge</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>If you read this you are gay</h1>
+    <div class="container"> 
+        <div class="header"><h1>MilkForge</h1></div>
+        <div class="main"><p>
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+        </p></div>
+        <div class="left"></div>
+        <div class="right"></div>
+        <div class="footer"><p>Thanks for shecking out my website</p></div>
+    </div>
 </body>
 </html>
