--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container"> 
-        <div class="header"><img src="MilkForge Logo.webp" alt="" width="600px"></div>
+        <div class="header"><img src="MilkForge Logo.webp" alt=""></div>
         <div class="main"><p>
             If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
             If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
