Made website pretty

--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 </head>
 <body>
     <div class="container"> 
-        <div class="header"><img src="MilkForge Logo.webp" alt=""></div>
+        <div class="header">
+            <img src="Images\MilkForge Logo.webp" alt="">
+        </div>
         <div class="main"><p>
-            If you read this you are gayIf you read this you    are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
-            If you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gayIf you read this you are gay
+            <h1>What the heck are you doing here?</h1>
+            <p>
+                Hello, my name is Anders Tsukanov, and this will be my logg/blogg/vlogg.
+                I want to post stuff that inntrest me, there is noe clear idea of what exactaly will be posted, but I dont think that is important right now.
+                As of why I am making a website, Seams like somthing neat to know about. Though I dont have any free time this days,
+                I'd like to tackel another project. cus you dont decide when creativity strickes.
+            </p>
         </p></div>
         <div class="left"></div>
         <div class="right"></div>
-        <div class="footer"><p>Thanks for shecking out my website</p></div>
+        <div class="footer">
+            <p style="color: rgb(218, 101, 5); text-shadow: 2px 2px 4px black; font-size: 22px;">Thanks for shecking out my website.</p>
+            <p>
+                The website is made with html and css, hosted with github and domaine frome Domene.no <br>
+                Made by Anders Tsukanov
+            </p>
+        </div>
     </div>
 </body>
-
 </html>
