--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MilkForge</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Images\Milkforge Logo(small).webp">
 </head>
 <body>
     <div class="container"> 
         <div class="header">
-            <img src="Images\MilkForge Logo.webp" alt="">
+            <img src="Images\MilkForge Logo Wide.webp" alt="">
         </div>
         <div class="main"><p>
             <h1>What the heck are you doing here?</h1>
@@ -23,7 +24,7 @@
         <div class="left"></div>
         <div class="right"></div>
         <div class="footer">
-            <p style="color: rgb(218, 101, 5); text-shadow: 2px 2px 4px black; font-size: 22px;">Thanks for shecking out my website.</p>
+            <p style="color: rgb(19, 44, 114); text-shadow: 1px 1px 18px rgb(232, 250, 255); font-size: 22px;">Thanks for checking out my website.</p>
             <p>
                 The website is made with html and css, hosted with github and domaine frome Domene.no <br>
                 Made by Anders Tsukanov
